# cpplint-fix

./: .gitignore  CODES.md  README.md  pyproject.toml
src/cpplint_fix/: __init__.py  __main__.py  config.py  parser.py  source.py  wrapper.py
src/cpplint_fix/edits/: __init__.py  __main__.py  base.py  whitespace.py
tests/: conftest.py  test_config.py  test_parser.py  test_source.py  test_wrapper.py
tests/examples/: example.xml
tests/examples/whitespace/blank_line/input/: main.cpp
tests/examples/whitespace/blank_line/output/: main.cpp
tests/examples/whitespace/comments/input/: main.cpp
tests/examples/whitespace/comments/output/: main.cpp
tests/examples/whitespace/end_of_line/input/: main.cpp
tests/examples/whitespace/end_of_line/output/: main.cpp
tests/examples/whitespace/ending_newline/input/: main.cpp
tests/examples/whitespace/ending_newline/output/: main.cpp
tests/examples/whitespace/indent/input/: main.cpp
tests/examples/whitespace/indent/output/: main.cpp
tests/test_edits/: conftest.py  test_base.py  test_edits.py
