[project]
name = "cpplint-fix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cpplint>=2.0.2",
]

[project.scripts]
cpplint-fix = "cpplint_fix.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.taskipy.tasks]
test = "pytest tests -vv"
lint = "ruff check src tests"
compile-supported-codes = "python -m cpplint_fix.edits > CODES.md"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.7",
    "taskipy>=1.14.1",
]
